assets/quiz-app.css
quiz-app {
  height: 100%;

  display: flex;
  flex-direction: column;
  align-items: center;

  font-family: var(--font-body-family);
  font-size: 15px;
}

quiz-app .quiz-app__slide-wrapper {
  width: 100%;
  flex-grow: 1;
  display: flex;
  flex-direction: column;
  overflow: hidden;
}

quiz-app .quiz-app__slide {
  width: 100%;
  display: none;
  flex-grow: 1;
  flex-direction: column;
  justify-content: center;

  text-align: center;
}

quiz-app .quiz-app__slide.active {
  display: flex;
}

quiz-app .quiz-app__slide h2 {
  font-size: 20px;
  font-weight: var(--font-body-weight-bold);
  margin: 0;
}

quiz-app .button:hover {
  background-color: rgb(var(--color-button-text));
  color: rgb(var(--color-button));
}

/* Welcome Slide */
quiz-app .quiz-app__slide--welcome {
  background-image: var(--quiz-app-welcome-screen-bg);
  background-size: cover;
  align-items: center;
}

quiz-app .quiz-app__slide--welcome-content {
  height: 100%;
  padding: 3rem 2rem;

  color: rgb(var(--color-button));

  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;

  max-width: 420px;
}

quiz-app .quiz-app__slide--welcome-content h1 {
  color: rgb(var(--color-button));
  font-size: 30px;
  font-weight: var(--font-body-weight-bold);
}

quiz-app .quiz-app__slide--welcome-content h1 span {
  color: rgba(233, 119, 194, 1);
  white-space: nowrap;
}

quiz-app .quiz-app__slide--welcome-content p {
  margin-top: 0;
  margin-bottom: 3rem;
}

@media only screen and (min-width: 820px) {
  quiz-app .quiz-app__slide--welcome {
    background-image: var(--quiz-app-welcome-screen-bg-dt);
    align-items: end;
    background-position-x: -220px;
  }

  quiz-app .quiz-app__slide--welcome-content {
    padding: 3rem 5rem 3rem 0;
    max-width: 50%;
  }
}

@media only screen and (min-width: 1080px) {
  quiz-app .quiz-app__slide--welcome {
    background-position-x: -110px;
  }

  quiz-app .quiz-app__slide--welcome-content {
    padding: 3rem 8rem 3rem 0;
  }

  quiz-app .quiz-app__slide--welcome-content h1 {
    font-size: 50px;
  }
}

@media only screen and (min-width: 1400px) {
  quiz-app .quiz-app__slide--welcome {
    background-position-x: 0;
  }

  quiz-app .quiz-app__slide--welcome-content {
    padding: 3rem 8rem 3rem 0;
  }
}

/* Question Options List */
quiz-app .quiz-app__slide ul {
  padding: 0;

  display: flex;
  flex-wrap: wrap;
  justify-content: center;
  align-content: center;
  gap: 15px;

  list-style: none;
}

quiz-app .quiz-app__slide ul li {
  display: flex;
}

quiz-app .quiz-app__slide ul li label {
  width: fit-content;
  margin-left: auto;
  margin-right: auto;
  padding: 1rem;

  display: flex;
  flex-direction: column;
  align-items: center;

  font-weight: var(--font-body-weight-bold);
  line-height: 1.2;
  cursor: pointer;
}

quiz-app .quiz-app__slide ul li input[type='checkbox'] {
  display: none;
}

/* Question options: Image style */
quiz-app .quiz-app__slide ul li.quiz-app__li--img {
  width: 144px;
  flex-direction: column;
}

quiz-app .quiz-app__slide ul li.quiz-app__li--img label::before {
  content: '';
  width: 120px;
  height: 120px;
  border: 0 solid rgb(var(--color-button));
  border-radius: 50%;
  transition: border-width 0.25s ease;
  position: absolute;
}

quiz-app .quiz-app__slide ul li.quiz-app__li--img label {
  color: rgba(var(--color-foreground), 0.5);
  transition: color 0.15s ease;

  font-size: 16px;
}

quiz-app .quiz-app__slide ul li.quiz-app__li--img label:hover {
  color: rgb(var(--color-foreground));
}

quiz-app .quiz-app__slide ul li.quiz-app__li--img label .quiz-app__label-image-wrapper {
  width: 120px;
  height: 120px;
  margin-bottom: 15px;

  border-radius: 50%;
  overflow: hidden;
}

quiz-app .quiz-app__slide ul li.quiz-app__li--img label .quiz-app__label-image-wrapper img {
  width: 120px;
  height: 120px;

  border-radius: 50%;

  position: relative; /* Can't use z-index unless this is set */
  z-index: -1;

  transition: transform 0.15s ease;
}

quiz-app .quiz-app__slide ul li.quiz-app__li--img label:hover img {
  transform: scale(1.1);
}

quiz-app .quiz-app__slide ul li.quiz-app__li--img input:checked + label {
  /* Checked */
  color: rgb(var(--color-foreground));
}

quiz-app .quiz-app__slide ul li.quiz-app__li--img input:checked + label::before {
  /* Checked */
  border-width: 4px;
}

/* Question options: Button style */
quiz-app .quiz-app__slide ul li.quiz-app__li--btn {
  height: fit-content;
}

quiz-app .quiz-app__slide ul li.quiz-app__li--btn label {
  width: 202px;
  padding: 15px 1.5rem;

  background-color: rgba(var(--color-button), 0.5);
  border-radius: 5px;

  line-height: 1;
  position: relative;
  transition: background-color 0.15s ease;
  transition: background-color 0.15s ease;
}

quiz-app .quiz-app__slide ul li.quiz-app__li--btn label:hover {
  background-color: rgba(var(--color-button), 0.25);
}

quiz-app .quiz-app__slide ul li.quiz-app__li--btn label::before {
  content: '';

  position: absolute;
  left: 0;
  right: 0;
  top: 0;
  bottom: 0;

  border: 0 solid rgb(var(--color-button));
  border-radius: 5px;

  transition: border-width 0.25s ease;
}

quiz-app .quiz-app__slide ul li.quiz-app__li--btn input:checked + label::before {
  /* Checked */
  border-width: 4px;
}

/* Buttons */
quiz-app .button {
  border-radius: 5px;
  font-weight: var(--font-body-weight-bold);
  transition: background-color 0.15s ease;
  text-transform: uppercase;
  padding: 0 1.5rem;
  font-family: var(--font-button-family);
  font-weight: var(--font-button-weight);
}

quiz-app .button::after {
  content: none;
}

quiz-app .button.button-alt {
  color: rgb(var(--color-button));
  background-color: rgb(var(--color-button-text));
}

quiz-app .button.button-alt:hover {
  color: rgb(var(--color-button-text));
  background-color: rgb(var(--color-button));
}

/* Progress Bar */
quiz-app .quiz-app__progress-bar {
  display: none;
  margin-bottom: 4rem;
  gap: 5px;
  margin-top: 3rem;
}

quiz-app .quiz-app__progress-bar.active {
  display: flex;
}

quiz-app .quiz-app__progress-bar div {
  height: 6px;
  width: 85px;

  display: block;

  background-color: rgb(var(--color-button));
  border-radius: 3px;
  transition: background-color 0.15s ease;
}

quiz-app .quiz-app__progress-bar div:not(.active) {
  background-color: rgba(var(--color-button), 0.2);
}

/* Controls */
quiz-app .quiz-app__controls {
  display: none;
  flex-direction: column;
  align-items: center;
  gap: 3rem;
  margin-bottom: 3rem;
}

quiz-app .quiz-app__controls.active {
  display: flex;
}

quiz-app .quiz-app__controls .button {
  width: 188px;
}

quiz-app .quiz-app__controls .button-link {
  background-color: transparent;

  padding: 4px 2px;
  border: none;

  color: rgb(var(--color-button));
  font-weight: var(--font-body-weight-bold);
  line-height: 1.2;

  position: relative;
  text-transform: uppercase;
  cursor: pointer;
}

quiz-app .quiz-app__controls .button-link::after {
  content: '';
  position: absolute;
  width: 100%;
  transform: scaleX(0);
  height: 2px;
  bottom: 0;
  left: 0;
  background-color: rgb(var(--color-button));
  transform-origin: bottom right;
  transition: transform 0.25s ease-out;
}

quiz-app .quiz-app__controls .button-link:hover::after {
  transform: scaleX(1);
  transform-origin: bottom left;
}

quiz-app .quiz-app__controls .quiz-app__controls--inner-wrapper {
  display: flex;
  gap: 12px;
}

/* Controls - Results */
quiz-app .quiz-app__controls--results {
  display: none;
  margin-bottom: 3rem;
}

quiz-app .quiz-app__controls--results.active {
  display: block;
}

quiz-app .quiz-app__controls--results .button {
  width: 188px;
}

/* Results page */
quiz-app .quiz-app__recommended {
  display: flex;
  justify-content: center;
  flex-wrap: wrap;
  row-gap: 20px;
  column-gap: 12px;
  margin-bottom: 3rem;
}

quiz-app .quiz-app__recommended .quiz-app__product-card {
  width: 187px;
}

quiz-app .quiz-app__recommended .quiz-app__product-card a {
  color: rgb(var(--color-foreground));
  text-align: left;
  text-decoration: none;
  font-size: 17px;
}

quiz-app .quiz-app__recommended .quiz-app__product-card a h3 {
  display: inline-block;
  text-overflow: ellipsis;
  word-wrap: break-word;
  overflow: hidden;
  height: 38px;
  line-height: 1.1;
  margin-bottom: 0;
}

quiz-app .quiz-app__recommended .quiz-app__product-card a p {
  margin-top: 0;
}

quiz-app .quiz-app__recommended .quiz-app__product-card a .quiz-app__product-img-wrapper {
  overflow: hidden;
}

quiz-app .quiz-app__recommended .quiz-app__product-card a .quiz-app__product-img-wrapper img {
  width: 100%;
  height: auto;
  aspect-ratio: 1 / 1;
  display: block;
  transition: transform 0.25s ease-out;
}

quiz-app .quiz-app__recommended .quiz-app__product-card a:hover .quiz-app__product-img-wrapper img {
  transform: scale(1.1);
}

quiz-app .quiz-app__recommended .quiz-app__product-card a:hover h3,
quiz-app .quiz-app__recommended .quiz-app__product-card a:hover p {
  text-decoration: underline;
}

quiz-app .quiz-app__recommended .quiz-app__product-card .button {
  width: 100%;
}

/* Loading spinner */
quiz-app .quiz-app__recommended .loading__spinner {
  width: 5rem;
  position: initial;
  margin-top: 3rem;
}

/* Transitions */
.animation--slide-in-left {
  animation: slide-in-left 0.25s ease;
}

.animation--slide-in-right {
  animation: slide-in-right 0.25s ease;
}

@keyframes slide-in-left {
  0% {
    margin-left: 100%;
  }
  100% {
    margin-left: 0;
  }
}

@keyframes slide-in-right {
  0% {
    margin-left: -100%;
  }
  100% {
    margin-left: 0;
  }
}

